<resources>
    <string name="app_name">GrandTheftRadio</string>
    <string name="bottom_nav_title_favorites">Favorites</string>
    <string name="bottom_nav_title_2d">2D</string>
    <string name="bottom_nav_title_3d">3D</string>
    <string name="bottom_nav_title_hd">HD</string>
    <string name="bottom_nav_title_import">Import</string>
    <string name="favorites_fragment_placeholder">Favorites</string>
    <string name="stations_fragment_placeholder">Stations</string>
    <string name="copy_template_to_downloads">Copy template to downloads</string>
    <string name="import_template_from_storage">Import template from storage</string>
    <string name="import_title">Import</string>
    <string name="stations_title">Stations</string>
    <string name="favorites_title">Favorites</string>
    <string name="template_is_in_your_downloads_folder">Template is in your Downloads folder</string>
    <string name="write_file_permission_ratio">We need write permission in order to copy a template file into your Download folder.</string>
    <string name="grant_permission_action">GRANT PERMISSION</string>
    <string name="read_file_permission_ratio">We need read permission in order to parse your edited template</string>
    <string name="import_tree_success">Successfully imported your template</string>
    <string name="import_tree_error">Error has happened: %1$s</string>
    <string name="station_error_text">Error has happened during initializing radio stations</string>
</resources>